fix layout issues on heroku

--- a/app/assets/stylesheets/zcustom.css
+++ b/app/assets/stylesheets/zcustom.css
@@ -2,12 +2,12 @@ body{
    /*margin-top: 35px; clear fixed nav*/
 }
 
+.container {
+  margin-top: 35px;  /*Clear fixed nav*/
+}
+
 .header {
-  /*width: 300px;*/
-  /*display: inline-block;*/
-  margin-top: 20px;
   font-family: 'Amaranth';
-  text-align: center;
   font-size: 6.5em;
 }
 .myheader {
@@ -19,10 +19,10 @@ img.cat {
   vertical-align: bottom;
 }
 
-/*
-a, .blue {
+
+.blue {
   color: #08037E !important;
-}*/
+}
 
 /* SIGN-IN */
 
@@ -68,19 +68,19 @@ div.mylinkspace {
   margin-bottom: 10px;
   height: 180px;
   border-bottom: 1px solid #e5e5e5;
-
 }
 
 i.myvotearrow {
   margin-left: 20px;
   text-decoration: none;
+  color: #08037E;
 }
 
 img.thumbnail.mythumbnail {
 /*  margin-top: 15px;*/
   /*max-height: 145px;*/
   box-shadow: 0px 0px 3px 2px #ddd;
-  /*border: 1px solid #ccc;*/
+  min-width: 220px;
 }
 
 img.userthumb {
@@ -111,6 +111,9 @@ p.previewtext {
   height: 55px; /*if I set this, will not be responsive*/
 }
 
+p.aboutlink a {
+  color: #08037E;
+}
 /*   COMMENTS   */
 
 .comments {
